[package]
name = "agent-citation"
version = "0.1.0"
edition = "2021"
description = "WHERE-layer structured citations for AI agent outputs"
license = "MIT"
repository = "https://github.com/MukundaKatta/agent-citation-rs"
keywords = ["agent", "citation", "attribution", "llm", "audit"]
categories = ["api-bindings"]
exclude = ["target/*", ".github/*", "*.log"]

[dependencies]
serde_json = "1"
