[package]
name = "agent-citation"
version = "0.1.0"
edition = "2021"
description = "WHERE-layer structured citations for AI agent outputs"
license = "MIT"
repository = "https://github.com/MukundaKatta/agent-citation-rs"
keywords = ["agent", "citation", "attribution", "llm", "audit"]
categories = ["api-bindings"]
exclude = ["target/*", ".github/*", "*.log"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
